# myfinances

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
config/: default_public.yaml
config/public/: drop_transactions.yaml  inputs.yaml  rename_transactions.yaml
config/public/labels/: car.yaml  entertainment.yaml  health.yaml  income.yaml  passive_income.yaml  shopping.yaml  ski_trip.yaml  transportation.yaml  utilities.yaml
data/public/: bank_transactions_ACC-001.csv  transactions.csv  transactions_bank_a.csv  transactions_bank_b_1.csv
myfinances/: config_utils.py  dashboard.py  drop_data.py  label_data.py  main.py  monthly_costs.py  monthly_transactions.py  parse_arguments.py  parse_configs.py  parse_data.py  rename_transactions.py  transaction_loader.py  utils.py
test/: test_regression.py
test/data/config/: default_public.yaml
test/data/config/public/: rename_transactions.yaml
test/data/config/public/labels/: food.yaml  gifts.yaml  housing.yaml  income.yaml  seasonal.yaml  subscriptions.yaml  transfers.yaml  transportation.yaml  travel.yaml
test/data/data/public/: bank_transactions_ACC-002.csv
test/myfinances/: test_drop_data.py  test_label_data.py  test_monthly_costs.py  test_monthly_transactions.py  test_monthly_transactions_error_handling.py  test_parse_data.py  test_rename_transactions.py  test_transaction_loader.py  test_transactions.py  test_utils.py
