[virtualenvs]
create = true
in-project = true

[tool.poetry]
name = "MyFinances"
version = "0.1.0"
description = "A tool to get an overview of the own finances by categorizing and manipulating transactions"
authors = ["Martin Grader <martingrader@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
pre-commit = "^4.0.1"
pandera = "^0.20.4"
loguru = "^0.7.2"
pydantic = "^2.9.2"
pyyaml = "^6.0.2"
requests = "^2.32.3"
hypothesis = "^6.123.7"
dash = "^2.18.2"

[tool.poetry.group.dev.dependencies]
pytest-ruff = "^0.4.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N"] #PL

[tool.ruff.format]
skip-magic-trailing-comma = false
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.pyright]
venvPath = "."
venv = ".venv"
